Fixed unexpected gap in header section of web-site in mobile version

--- a/styles/style-mobile.css
+++ b/styles/style-mobile.css
@@ -102,8 +102,6 @@ body {
     margin-top: 5vh;
     margin-bottom: 5vh;
     opacity: 0;
-    -webkit-transform: rotateZ(15deg);
-    transform: rotateZ(15deg);
     /* -webkit-backdrop-filter: blur(5px); */
   }
 
